Fix T48913: cycles viewport render stuck in loop due to non-unique dupli ID.